GNOME Bugzilla – Bug 778945
Missing icon and application name not set in wayland
Last modified: 2017-02-23 15:34:27 UTC
Hi, It seems that the icon and the name of the application is not properly set in the top bar of gnome-shell. This is more noticeable when using wayland.
I think the issue comes from the fact that the .desktop file is called org.gnome.PowerStats while the application id passed to the gtk_application_new() function is "org.gnome.PowerManager.Statistics"
Created attachment 346247 [details] [review] Rename the application id passed to the gtk_application_new() function The application id and the desktop file need to match, rename the application id here instead of renaming all the other icon and .desktop files
Alternatively, g_set_prgname("org.gnome.PowerStatus"); should work as well - just *something* that points to the correct .desktop file name ...
(Note that I'm not involved with gnome-power-manager, so I'm not making any judgment on what solution should be used)
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.