Rename the application id passed to the gtk_application_new() function

The application id and the desktop file need to match, rename the
application id here instead of renaming all the other icon and .desktop
files

https://bugzilla.gnome.org/show_bug.cgi?id=778945